[package]
name = "hx1230"
version = "0.1.1"
edition = "2021"

[features]
# Enables rendering into display buffer using `embedded_graphics` library
embedded_graphics = ["dep:embedded-graphics-core"]

[dependencies]
embedded-hal = "0.2.6"
embedded-graphics-core = { version = "0.3.3", optional = true }