[package]
name = "hx1230"
version = "0.3.2"
edition = "2021"
readme = "README.md"
repository = "https://github.com/viktorchvatal/hx1230"
keywords = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std"]
description = "Driver for the HX1230 display"
authors = ["Viktor Chvátal"]
exclude = [
    ".gitignore",
    "doc/display.jpg"
]

[features]
default = ["embedded_graphics"]
# Enables rendering into display buffer using `embedded_graphics` library
embedded_graphics = ["dep:embedded-graphics-core"]

[dependencies]
embedded-hal = "0.2.6"
embedded-graphics-core = { version = "0.3.3", optional = true }

# Dependencies for examples:
[dev-dependencies]
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"

[dev-dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]

[dev-dependencies.arrayvec]
version = "0.7.2"
default-features = false
